[package]
name = "rusterpassword"
version = "0.1.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "An implementation of the Master Password algorithm."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/rusterpassword"
repository = "https://github.com/myfreeweb/rusterpassword"
documentation = "https://myfreeweb.github.io/autodocs/rusterpassword/rusterpassword"

[dependencies]
libc = "0"
secstr = "0"
byteorder = "0"
libsodium-sys = "0"
